--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="popup_width">510dp</dimen>
+    <dimen name="popup_height">250dp</dimen>
 </resources>
