--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,17 +12,25 @@
         tools:layout="@layout/fragment_first">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_FirstFragment_to_activityNoteFragment2"
+            app:destination="@id/activityNoteFragment" />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
         android:name="com.example.klapp_notes.SecondFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_second"/>
+
+    <fragment
+        android:id="@+id/activityNoteFragment"
+        android:name="com.example.klapp_notes.ActivityNote"
+        android:label="ActivityNote"
+        tools:layout="@layout/activity_note">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_FirstFragment_to_ActivityNote"
+            app:destination="@id/activityNoteFragment" />
+
     </fragment>
+
 </navigation>
