--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/activity_workspace_layout">
 
     <fragment
         android:id="@+id/FirstFragment"
@@ -15,11 +15,6 @@
             android:id="@+id/action_FirstFragment_to_activityNoteFragment2"
             app:destination="@id/activityNoteFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.klapp_notes.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second"/>
 
     <fragment
         android:id="@+id/activityNoteFragment"
@@ -32,5 +27,9 @@
             app:destination="@id/activityNoteFragment" />
 
     </fragment>
-
+    <fragment
+        android:id="@+id/activity_workspace_layout"
+        android:name="com.example.klapp_notes.activity_workspaces"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/activity_workspaces_layout"/>
 </navigation>
