--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="popup_width">510dp</dimen>
     <dimen name="popup_height">250dp</dimen>
+    <dimen name="width_table_square">320dp</dimen>
+    <dimen name="margin_between_tables">16dp</dimen>
+    <dimen name="border_size">2dp</dimen>
 </resources>
