--- a/app/src/main/res/drawable/ic_hamburger_menu.xml
+++ b/app/src/main/res/drawable/ic_hamburger_menu.xml
@@ -8,6 +8,6 @@
     android:tint="?attr/colorControlNormal">
 
     <path
-        android:fillColor="@android:color/holo_orange_light"
+        android:fillColor="@android:color/white"
         android:pathData="M3,18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
 </vector>
